# wpctl

./: .gitignore  AGENT.md  CHANGELOG.md  LICENSE  README.md  pip-audit-report.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: codex-request_for_gitea.yaml  docs-gh-pages.yml  pyruff.yml  pytest.yml
docs/: conf.py  index.rst  modules.rst  utils.rst
examples/: example.py
readme/: python_init.md
readme/design/: app_design.md  app_detail.md  app_spec.md  develop.md  pompt01.md  pompt02.md  pompt03.md
readme/templates/: ctl_design.md
scripts/: check_cve.py  create_release_tag.sh  create_secret_key.py  generate_coverage.py  generate_linter.py
src/: main.py
src/utils/: custom_logger.py  singleton.py
src/wpctl/: __init__.py  main.py  run.py
src/wpctl/api/: api_wordpress.py
src/wpctl/commands/: create.py  get.py  show.py  update.py
src/wpctl/libs/: file_reader.py  md_to_html.py
src/wpctl/utils/: custom_logger.py
tests/: conftest.py  test_endpoint.py  test_file_reader.py  test_main.py  test_wordpress_api.py
